--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -134,7 +134,7 @@ events:
   # IDs of commands that should be executed before the devworkspace start. These commands would typically be executed in an init container
   preStart:
     - init-container-command
-  # IDs of commands that should be executed after the devworkspace is completely started. In the case of Che-Code, these commands should be executed after all plugins and extensions have started, including project cloning. This means that those commands are not triggered until the user opens the IDE in his browser
+  # IDs of commands that should be executed after the devworkspace has completely started. In the case of Che-Code, these commands should be executed after all plugins and extensions have started, including project cloning. This means that those commands are not triggered until the user opens the IDE within the browser
   postStart:
     - init-che-code-command
 # (OPTIONAL) Predefined, ready-to-use, devworkspace-related commands
