--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -142,7 +142,7 @@ commands:
     # Mandatory identifier that allows referencing this command
   - id: init-container-command
     apply:
-      # Describes component to which given action relates
+      # Describes the component for the apply command
       component: che-code-injector
     # Mandatory identifier that allows referencing this command
   - id: init-che-code-command
