--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -148,7 +148,7 @@ commands:
   - id: init-che-code-command
     # CLI Command executed in an existing component container
     exec:
-      # Describes component to which given action relates
+      # Describes component for the exec command
       component: che-code-runtime-description
       # The actual command-line string
       commandLine: 'nohup /checode/entrypoint-volume.sh > /checode/entrypoint-logs.txt
