--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -169,7 +169,7 @@ commands:
 {orch-cli} label configmap my-editor-definition app.kubernetes.io/part-of=che.eclipse.org app.kubernetes.io/component=editor-definition -n {prod-namespace}
 ----
 
-. Refresh the {prod-short} Dashboard page to see new available editors.
+. Refresh the {prod-short} Dashboard page to see new available editor.
 
 .Additional resources
 
