--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -85,7 +85,7 @@ components:
     container:
       # Can be a dummy image because the component is expected to be injected into workspace dev component
       image: quay.io/devfile/universal-developer-image:latest
-      # (OPTIONAL) List of volumes mounts that should be mounted in this container
+      # (OPTIONAL) List of volume mounts that should be mounted in this container
       volumeMounts:
           # The name of the mount
         - name: checode
