--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -17,8 +17,11 @@ Learn how to configure {prod-short} editor definitions.
 
 . Create the `my-editor-definition-devfile.yaml` YAML file with the editor definition configuration.
 +
-Ensure to provide the actual values for `publisher` and `version` under `metadata.attributes`.
+[IMPORTANT]
+====
+Make sure you provide the actual values for `publisher` and `version` under `metadata.attributes`.
 They are used to construct the editor id along with editor name in the following format `publisher/name/version`.
+====
 +
 Below you can find the supported values, including optional ones:
 +
