--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -112,7 +112,7 @@ components:
         - name: che-code
           # (OPTIONAL) Map of implementation-dependant string-based free-form attributes
           attributes:
-            # Type of the endpoint. It only allows for it's value to be set to main  which indicates that the endpoint should be used as the mainUrl in the workspace status (i.e. it should be the URL used to access the editor in this context)
+            # Type of the endpoint. You can only set its value to main, indicating that the endpoint should be used as the mainUrl in the workspace status (i.e. it should be the URL used to access the editor in this context)
             type: main
             # An attribute that instructs the service to automatically redirect the unauthenticated requests for current user authentication. Setting this attribute to true has security consequences because it makes Cross-site request forgery (CSRF) attacks possible. The default value of the attribute is false.
             cookiesAuthEnabled: true
