--- a/modules/administration-guide/pages/configuring-storage-sizes.adoc
+++ b/modules/administration-guide/pages/configuring-storage-sizes.adoc
@@ -63,7 +63,5 @@ pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 ====
 Manually modifying a PVC on the cluster that was provisioned by {prod-short} is not officially supported and may result in unexpected consequences.
 
-If you want to resize a PVC, you have two options:
-
-* Modify the default workspace storage size in the `CheCluster` custom resource.
+If you want to resize a PVC, modify the default workspace storage size in the `CheCluster` custom resource.
 ====
