--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
@@ -90,9 +90,9 @@ data:
 ----
 ====
 
-This results in a file named `ca.crt` being mounted at the `/data` path of {prod-short} container.
+This results in a file named `ca.crt` being mounted at the `/data` path of the {prod-short} container.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
+IMPORTANT: To make the changes in the {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
 
 .Additional resources
 
