--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
@@ -4,7 +4,7 @@
 
 
 [id="mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container"]
-= Mounting a Secret or a ConfigMap as an environment variable into a {prod-short} container
+= Mounting a Secret or a ConfigMap as an environment variable into {prod-short} container
 
 
 .Prerequisites
@@ -61,7 +61,7 @@ This results in two environment variables:
 
 * `myvalue`
 
-being provisioned into a {prod-short} container.
+being provisioned into the {prod-short} container.
 
 If the object provides more than one data item, the environment variable name must be provided for each of the data keys as follows:
 
@@ -114,7 +114,7 @@ being provisioned into a {prod-short} container.
 
 NOTE: The maximum length of annotation names in a {orch-name} object is 63 characters, where 9 characters are reserved for a prefix that ends with `/`. This acts as a restriction for the maximum length of the key that can be used for the object.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
+IMPORTANT: To make the changes in the {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
 
 .Additional resources
 
