--- a/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
+++ b/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
@@ -6,7 +6,7 @@
 // mounting-a-secret-or-a-configmap-as-a-file-into-a-container
 
 
-. Create a new {platforms-name} Secret or a ConfigMap in the {platforms-name} {orch-namespace} where a {prod-short} is deployed. The labels of the object that is about to be created must match the set of labels:
+. Create a new {platforms-name} Secret or a ConfigMap in the {platforms-name} {orch-namespace} where {prod-short} is deployed. The labels of the object that is about to be created must match the set of labels:
 +
 * `app.kubernetes.io/part-of: che.eclipse.org`
 * `app.kubernetes.io/component: <DEPLOYMENT_NAME>-<OBJECT_KIND>`
