--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -7,7 +7,7 @@
 [id="running-containers-with-kubedock"]
 = Running containers with kubedock
 
-link:https://github.com/joyrex2001/[Kubedock] is a minimal container engine implementation that gives you a Podman-/docker-like experience inside a {prod-short} workspace. Kubedock is especially useful when dealing with ad-hoc, ephemeral, and testing containers, such as in the use cases listed below:
+link:https://github.com/joyrex2001/kubedock[Kubedock] is a minimal container engine implementation that gives you a Podman-/docker-like experience inside a {prod-short} workspace. Kubedock is especially useful when dealing with ad-hoc, ephemeral, and testing containers, such as in the use cases listed below:
 
 * Executing application tests which rely on link:https://testcontainers.com/[Testcontainers] framework.
 
