--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -65,12 +65,11 @@ Using `podman` commands with kubedock has following limitations
 ----
 schemaVersion: 2.2.0
 metadata:
-  name: superheroes-workshop
+  name: kubedock-sample-devfile
 components:
   - name: tools
     container:
       image: quay.io/devfile/universal-developer-image:latest
-      #image: quay.io/openshiftlabs/quarkus-workshop-stack:3.9
       memoryLimit: 8Gi
       memoryRequest: 1Gi
       cpuLimit: "2"
