--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -17,7 +17,7 @@ link:https://github.com/joyrex2001/kubedock[Kubedock] is a minimal container eng
 
 [IMPORTANT]
 ====
-The image you wish to use with kubedock must be compliant with link:https://docs.openshift.com/container-platform/{ocp4-ver}/openshift_images/create-images.html#images-create-guide-openshift_create-images[Openshift Container Platform guidelines].
+The image you want to use with kubedock must be compliant with link:https://docs.openshift.com/container-platform/{ocp4-ver}/openshift_images/create-images.html#images-create-guide-openshift_create-images[Openshift Container Platform guidelines].
 Otherwise, running the image with kubedock will result in a failure even if the same image runs locally without issues.
 ====
 
