--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -1,4 +1,4 @@
-:_content-type: ASSEMBLY
+:_content-type: PROCEDURE
 :description: Running containers with kubedock
 :keywords: kubedock, container
 :navtitle: Running containers with kubedock
