--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -72,7 +72,7 @@ spec:
   started: true#<3>
   contributions:#<4>
     - name: ide
-      uri: pass:c,a,q[{prod-url}]/plugin-registry/v3/plugins/che-incubator/che-code/latest/devfile.yaml
+      uri: http://che-dashboard.{prod-namespace}.svc.cluster.local:8080/dashboard/api/editors/devfile?che-editor=che-incubator/che-code/latest
   template:
     projects:#<5>
       - name: my-project-name
@@ -87,7 +87,7 @@ spec:
 <1> Name of the `DevWorkspace` custom resource. This will be the name of the new workspace.
 <2> User namespace, which is the target {orch-namespace} for the new workspace.
 <3> Determines whether the workspace must be started when the `DevWorkspace` custom resource is created.
-<4> URL reference to the link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] IDE devfile from the plugin registry.
+<4> URL reference to the link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] IDE devfile.
 <5> Details about the Git repository to clone into the workspace when it starts.
 <6> List of components such as workspace containers and volume components.
 ====
