--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -72,7 +72,7 @@ spec:
   started: true#<3>
   contributions:#<4>
     - name: ide
-      uri: http://che-dashboard.{prod-namespace}.svc.cluster.local:8080/dashboard/api/editors/devfile?che-editor=che-incubator/che-code/latest
+      uri: pass:c,a,q[http://{prod-id-short}-dashboard.{prod-namespace}.svc.cluster.local:8080]/dashboard/api/editors/devfile?che-editor=che-incubator/che-code/latest
   template:
     projects:#<5>
       - name: my-project-name
