--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -18,6 +18,7 @@
 ** xref:using-the-fuse-overlay-storage-driver.adoc[]
 *** xref:accessing-fuse.adoc[]
 *** xref:enabling-overlay-with-a-configmap.adoc[]
+** xref:running-containers-with-kubedock.adoc[]
 * xref:using-che-in-team-workflow.adoc[]
 ** xref:first-time-contributors.adoc[]
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
