feat: document how to enable fuse for all users' workspaces
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -85,6 +85,8 @@
 *** xref:configuring-advanced-authorization.adoc[]
 *** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
 ** xref:configuring-fuse.adoc[]
+*** xref:enabling-access-to-dev-fuse-for-openshift.adoc[]
+*** xref:enabling-fuse-for-all-workspaces.adoc[]
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 ** xref:trusted-extensions-for-microsoft-visual-studio-code.adoc[]
