--- a/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
+++ b/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
@@ -59,7 +59,7 @@ metadata:
     controller.devfile.io/mount-to-devworkspace: 'true'
     controller.devfile.io/watch-configmap: 'true'
   annotations:
-    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-as: subpath
     controller.devfile.io/mount-path: /home/user/.config/containers
 data:
   storage.conf: |
