--- a/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
+++ b/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
@@ -15,7 +15,7 @@ Podman and Buildah are included in the UDI, allowing developers to build and pus
 By default, Podman and Buildah in the UDI are configured to use the `vfs` storage driver.
 For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
-You must meet the following requirements to fuse-overlayfs in a workspace:
+You must meet the following requirements to use fuse-overlayfs in a workspace:
 
 . For OpenShift versions older than 4.15, the administrator has enabled `/dev/fuse` access on the cluster by following xref:administration-guide:configuring-fuse.adoc[].
 . The workspace has the necessary annotations for using the `/dev/fuse` device. See xref:accessing-fuse.adoc[].
