--- a/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
+++ b/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
@@ -41,27 +41,28 @@ data:
 ----
 ====
 
-. Set the necessary annotations in the CheCluster custom resource.
+. Set the necessary annotation in the `spec.devEnvironments.annotations` field of the CheCluster custom resource.
 +
 ====
 [source,yaml,subs="+quotes,+attributes"]
 ----
 kind: CheCluster
+apiVersion: org.eclipse.che/v2
 spec:
   devEnvironments:
-    annotations:
-      "io.kubernetes.cri-o.Devices": "/dev/fuse"
+    workspacePodAnnotations:
+      io.kubernetes.cri-o.Devices: /dev/fuse
 ----
 ====
 +
 [NOTE]
 ====
-For OpenShift cluster versions before 4.15, the `"io.openshift.podman-fuse":""` annotation is also required.
+For OpenShift versions before 4.15, the `io.openshift.podman-fuse: ""` annotation is also required.
 ====
 
 .Verification steps
 
-. Start the workspace containing the required annotations and verify that the storage driver is `overlay`.
+. Start a workspace and verify that the storage driver is `overlay`.
 +
 [subs="+attributes,+quotes"]
 ----
