--- a/modules/administration-guide/pages/configuring-oauth-for-git-providers.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-for-git-providers.adoc
@@ -14,3 +14,17 @@ You can configure OAuth between {prod-short} and Git providers, enabling users t
 * Configuring xref:configuring-oauth-2-for-a-bitbucket-server.adoc[OAuth 2.0 for a Bitbucket Server] or xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[OAuth 2.0 for the Bitbucket Cloud]
 * Configuring xref:configuring-oauth-1-for-a-bitbucket-server.adoc[OAuth 1.0 for a Bitbucket Server]
 * xref:configuring-oauth-2-for-microsoft-azure-devops-services.adoc[]
+
+[NOTE]
+====
+To enable the experimental feature that forces a refresh of the personal access token on workspace startup in {prod}, modify the Custom Resource configuration as follows:
+
+[source,yaml]
+----
+spec:
+  components:
+    cheServer:
+      extraProperties:
+        CHE_FORCE_REFRESH_PERSONAL_ACCESS_TOKEN: "true"
+----
+====
