chore: describe how to build plugin registry in the product
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -11,25 +11,17 @@ TIP: To get the latest security fixes after a {prod-short} update, rebuild your 
 
 pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
-.Prerequisites
-
-* Linux operating system.
-
-* Podman tool to build an image.
-
-* NodeJS version 18.20.3 or higher.
-
 .Procedure
 
-. Get the publisher and extension names of each chosen extension:
+. Get the publisher and extension name of each chosen extension:
 
-.. Find the extension on the link:https://www.open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page.
+.. Find the extension on the link:https://open-vsx.org/[Open VSX registry website] and copy the URL of the extension's listing page and extension's version.
 
-.. Extract the __<publisher>__ and __<extension>__ names from the copied URL:
+.. Extract the __<publisher>__ and __<extension>__ name from the copied URL:
 +
 [subs="+quotes"]
 ----
-https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
+https://open-vsx.org/extension/__<publisher>__/__<name>__
 ----
 +
 [TIP]
@@ -38,6 +30,30 @@ https://www.open-vsx.org/extension/__<publisher>__/__<extension>__
 If the extension is only available from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace], but not link:https://open-vsx.org[Open VSX], you can ask the extension publisher to also publish it on link:https://open-vsx.org[open-vsx.org] according to these link:https://github.com/eclipse/openvsx/wiki/Publishing-Extensions#how-to-publish-an-extension[instructions], potentially using this link:https://github.com/marketplace/actions/publish-vs-code-extension[GitHub action].
 
 If the extension publisher is unavailable or unwilling to publish the extension to link:https://open-vsx.org[open-vsx.org], and if there is no Open VSX equivalent of the extension, consider link:https://github.com/open-vsx/publish-extensions/issues[reporting an issue] to the Open VSX team.
+
+====
+
+. Build the custom plugin registry image and update CheCluster custom resource:
++
+[TIP]
+====
+
+* During the build process, each extension will be verified for compatibility with the version of Visual Studio Code used in {prod-short}.
+
+====
+
+.. Using {prod-short} instance:
+
+... Login to your {prod-short} instance as an administrator.
+
+include::example$snip_{project-context}-steps-to-build-custom-plugin-registry-in-workspace.adoc[]
+
+.. Using Linux operating system:
++
+[TIP]
+====
+
+* Podman and NodeJS version 18.20.3 or higher should be installed in the system.
 
 ====
 
@@ -63,7 +79,7 @@ include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-ope
 [source,json,subs="+quotes"]
 ----
     {
-        "id": "__<publisher>__.__<extension>__",
+        "id": "__<publisher>__.__<name>__",
         "download": "__<url_to_download_vsix_file>__",
         "version": "__<extension_version>__"
     }
@@ -73,23 +89,23 @@ include::example$snip_{project-context}-steps-to-add-or-remove-extensions-in-ope
 
 ====
 
-. Build the plugin registry container image and publish it to a container registry like link:https://quay.io/[quay.io]:
+... Build the plugin registry container image and publish it to a container registry such as link:https://quay.io/[quay.io]:
 
-.. {empty}
+.... {empty}
 +
 [subs="+attributes,+quotes"]
 ----
 $ ./build.sh -o __<username>__ -r quay.io -t custom
 ----
 
-.. {empty}
+.... {empty}
 +
 [subs="+attributes,+quotes"]
 ----
 $ {docker-cli} push quay.io/__<username/plugin_registry:custom>__
 ----
 
-. Edit the `CheCluster` custom resource in your organization's cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and save the changes:
+... Edit the `CheCluster` custom resource in your organization's cluster to point to the image (for example, on link:https://quay.io/[quay.io]) and save the changes:
 +
 [source,yaml,subs="+quotes"]
 ----
