--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -37,7 +37,9 @@
 ** xref:configuring-server-components.adoc[]
 *** xref:mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc[]
 *** xref:advanced-configuration-options-for-the-che-server-component.adoc[]
+** xref:configuring-autoscaling.adoc[]
 *** xref:configuring-number-of-replicas.adoc[]
+*** xref:configuring-machine-autoscaling.adoc[]
 ** xref:configuring-workspaces-globally.adoc[]
 *** xref:limiting-the-number-of-workspaces-that-a-user-can-keep.adoc[]
 *** xref:enabling-users-to-run-multiple-workspaces-simultaneously.adoc[]
