--- a/modules/administration-guide/pages/configuring-autoscaling.adoc
+++ b/modules/administration-guide/pages/configuring-autoscaling.adoc
@@ -7,4 +7,4 @@
 [id="configuring-autoscaling"]
 = Configuring autoscaling
 
-This section describes different aspects of autoscaling for {prod}.
+Learn about different aspects of autoscaling for {prod}.
