Fix PR feedback
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/configuring-autoscaling.adoc
+++ b/modules/administration-guide/pages/configuring-autoscaling.adoc
@@ -8,3 +8,6 @@
 = Configuring autoscaling
 
 Learn about different aspects of autoscaling for {prod}.
+
+* xref:configuring-number-of-replicas.adoc[]
+* xref:configuring-machine-autoscaling.adoc[]
