--- a/modules/administration-guide/pages/configuring-machine-autoscaling.adoc
+++ b/modules/administration-guide/pages/configuring-machine-autoscaling.adoc
@@ -7,7 +7,7 @@
 [id="configuring-machine-autoscaling"]
 = Configuring machine autoscaling
 
-If a cluster has been configured to adjust the number of cluster nodes depending on resource needs, additional configuration is required to maintain the seamless operation of workspaces.
+If you configured the cluster to adjust the number of nodes depending on resource needs, you need additional configuration to maintain the seamless operation of {prod-short} workspaces.
 
 Special consideration must be made for workspaces when the autoscaler adds and removes nodes.
 
