--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -15,7 +15,7 @@ Learn how to configure {prod-short} editor definitions.
 
 .Procedure
 
-. Create the `my-editor-definition-devfile.yaml` YAML file with the editor definition configuration.
+. Create the `my-editor-definition-devfile.yaml` YAML file with the editor definition configuration in the namespace where CheCluster Custom Resource is located.
 +
 [IMPORTANT]
 ====
