fix: annotations typo in CheCluster example
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
+++ b/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
@@ -41,7 +41,7 @@ data:
 ----
 ====
 
-. Set the necessary annotation in the `spec.devEnvironments.annotations` field of the CheCluster custom resource.
+. Set the necessary annotation in the `spec.devEnvironments.workspacesPodAnnotations` field of the CheCluster custom resource.
 +
 ====
 [source,yaml,subs="+quotes,+attributes"]
@@ -50,7 +50,7 @@ kind: CheCluster
 apiVersion: org.eclipse.che/v2
 spec:
   devEnvironments:
-    workspacePodAnnotations:
+    workspacesPodAnnotations:
       io.kubernetes.cri-o.Devices: /dev/fuse
 ----
 ====
