--- a/modules/administration-guide/pages/configuring-storage-sizes.adoc
+++ b/modules/administration-guide/pages/configuring-storage-sizes.adoc
@@ -63,5 +63,5 @@ pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 ====
 Manually modifying a PVC on the cluster that was provisioned by {prod-short} is not officially supported and may result in unexpected consequences.
 
-If you want to resize a PVC that is in use by a workspace, you must restart the workspace before the PVC change can occur.
+If you want to resize a PVC that is in use by a workspace, you must restart the workspace for the PVC change to occur.
 ====
