replaced broken link

--- a/modules/overview/pages/introduction-to-eclipse-che.adoc
+++ b/modules/overview/pages/introduction-to-eclipse-che.adoc
@@ -34,7 +34,9 @@ Interested in joining the community? Join us on the following channels:
 
 Public chat::
 
-Join the public link:https://mattermost.eclipse.org/eclipse/channels/eclipse-che[{prod} Mattermost] channel to chat with the developers.
+Join the public link:https://communityinviter.com/apps/ecd-tools/join-the-community[Eclipse Cloud Dev Tools Working Group on Slack]
+and the link:https://ecd-tools.slack.com/archives/C05SD64M85R[#forum-che channel]
+to chat with the developers.
 
 GitHub project repositories::
 
